--- a/.github/workflows/custom.yaml
+++ b/.github/workflows/custom.yaml
@@ -22,11 +22,8 @@ jobs:
       - name: Check folder
         run: pwd
 
-      - name: Check root
-        run: which kubectl
-
       # - name: Check kubectl
       #   run: kubectl get namespaces
 
-      # - name: Check helm
-      #   run: helm list
+      - name: Check helm
+        run: helm list
