--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@svgr/webpack": "^8.0.1",
+    "@tanstack/react-query": "^4.29.7",
     "@types/node": "20.2.1",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "antd": "^5.5.0",
+    "axios": "^1.4.0",
     "next": "13.4.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
