--- a/frontend/deployment/Chart.yaml
+++ b/frontend/deployment/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: backend-deployment
+name: frontend-deployment
 description: A Helm chart for Kubernetes
 
 # A chart can be either an 'application' or a 'library' chart.
