--- a/.github/workflows/lint-frontend.yaml
+++ b/.github/workflows/lint-frontend.yaml
@@ -19,6 +19,9 @@ jobs:
           node-version: 18
           cache: yarn
 
+      - name: Install yarn
+        run: npm install --global yarn
+
       - name: Install dependencies
         run: yarn install --frozen-lockfile
 
