--- a/.github/workflows/lint-backend.yaml
+++ b/.github/workflows/lint-backend.yaml
@@ -16,11 +16,8 @@ jobs:
       - name: Setup node
         uses: actions/setup-node@v3
         with:
-          node-version: 18
+          node-version: 18.15.x
           cache: yarn
-          
-      - name: Install yarn
-        run: npm install --global yarn
 
       - name: Install dependencies
         run: yarn install --frozen-lockfile
