--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -43,55 +43,58 @@ jobs:
 
       - name: Check build
         run: yarn build
-  # build-backend:
-  #   runs-on: self-hosted
-  #   defaults:
-  #     run:
-  #       shell: bash
-  #       working-directory: backend
-  #   steps:
-  #     - name: Checkout
-  #       uses: actions/checkout@v3
-
-  #     - name: Setup node
-  #       uses: actions/setup-node@v3
-  #       with:
-  #         node-version: 18
-
-  #     - name: Get node version
-  #       id: node
-  #       run: |
-  #         echo "::set-output name=version::$(node -v)"
-
-  #     - name: Get node_modules cache
-  #       uses: actions/cache@v3
-  #       id: node_modules
-  #       with:
-  #         path: |
-  #           **/node_modules
-  #         key: ${{ runner.os }}-node_modules-${{ hashFiles('**/yarn.lock') }}-${{ steps.node.outputs.version }}
-
-  #     - name: Install yarn
-  #       run: npm install -g yarn
-
-  #     - name: Install dependencies
-  #       run: yarn install --frozen-lockfile
-
-  #     - name: Run build check
-  #       run: yarn build
-
-  #     - name: Run test
-  #       run: yarn test
-  deploy-frontend:
+  build-backend:
     runs-on: self-hosted
-    needs: 
-      - build-frontend
     defaults:
       run:
         shell: bash
-        working-directory: frontend
-    env:
-      HOME: "/root"
+        working-directory: backend
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Setup node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+
+      - name: Get node version
+        id: node
+        run: |
+          echo "::set-output name=version::$(node -v)"
+
+      - name: Get node_modules cache
+        uses: actions/cache@v3
+        id: node_modules
+        with:
+          path: |
+            **/node_modules
+          key: ${{ runner.os }}-node_modules-${{ hashFiles('**/yarn.lock') }}-${{ steps.node.outputs.version }}
+
+      - name: Install yarn
+        run: npm install -g yarn
+
+      - name: Install dependencies
+        run: yarn install --frozen-lockfile
+
+      - name: Run build check
+        run: yarn build
+
+      - name: Run test
+        run: yarn test
+  build-and-push:
+    runs-on: self-hosted
+    needs:
+      - build-frontend
+      - build-backend
+    strategy:
+        fail-fast: false
+        matrix:
+          include:
+            - dockerfile: backend/deployment/Dockerfile
+              image: swr.ru-moscow-1.hc.sbercloud.ru/geek-battle-2023/backend
+            - dockerfile: frontend/deployment/Dockerfile
+              image: swr.ru-moscow-1.hc.sbercloud.ru/geek-battle-2023/frontend
     steps:      
       - name: Checkout
         uses: actions/checkout@v3
@@ -100,7 +103,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v4
         with:
-          images: swr.ru-moscow-1.hc.sbercloud.ru/geek-battle-2023/frontend
+          images: ${{ matrix.image }}
         
       - name: Login to docker registry
         if: github.event_name != 'pull_request'
@@ -114,7 +117,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: .
-          file: deployment/Dockerfile
+          file: ${{ matrix.dockerfile }}
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
