--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -84,7 +84,7 @@ jobs:
   #       run: yarn test
   build-and-push:
     runs-on: self-hosted
-    needs:
+    # needs:
       # - build-frontend
       # - build-backend
     strategy:
