--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,86 +7,86 @@ on:
       - deployment
 
 jobs:
-  # build-frontend:
-  #   runs-on: self-hosted
-  #   defaults:
-  #     run:
-  #       shell: bash
-  #       working-directory: frontend
-  #   steps:
-  #     - name: Checkout
-  #       uses: actions/checkout@v3
+  build-frontend:
+    runs-on: self-hosted
+    defaults:
+      run:
+        shell: bash
+        working-directory: frontend
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
 
-  #     - name: Setup node
-  #       uses: actions/setup-node@v3
-  #       with:
-  #         node-version: 18
+      - name: Setup node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
 
-  #     - name: Get node version
-  #       id: node_version
-  #       run: |
-  #         echo "version=$(node -v)" >> $GITHUB_OUTPUT
+      - name: Get node version
+        id: node_version
+        run: |
+          echo "version=$(node -v)" >> $GITHUB_OUTPUT
 
-  #     - name: Get node_modules cache
-  #       uses: actions/cache@v3
-  #       id: node_modules
-  #       with:
-  #         path: |
-  #           **/node_modules
-  #         key: ${{ runner.os }}-node_modules-${{ hashFiles('**/yarn.lock') }}-${{ steps.node_version.outputs.version }}
+      - name: Get node_modules cache
+        uses: actions/cache@v3
+        id: node_modules
+        with:
+          path: |
+            **/node_modules
+          key: ${{ runner.os }}-node_modules-${{ hashFiles('**/yarn.lock') }}-${{ steps.node_version.outputs.version }}
 
-  #     - name: Install yarn
-  #       run: npm install -g yarn
+      - name: Install yarn
+        run: npm install -g yarn
 
-  #     - name: Install dependencies
-  #       run: yarn install --frozen-lockfile
+      - name: Install dependencies
+        run: yarn install --frozen-lockfile
 
-  #     - name: Check build
-  #       run: yarn build
-  # build-backend:
-  #   runs-on: self-hosted
-  #   defaults:
-  #     run:
-  #       shell: bash
-  #       working-directory: backend
-  #   steps:
-  #     - name: Checkout
-  #       uses: actions/checkout@v3
+      - name: Check build
+        run: yarn build
+  build-backend:
+    runs-on: self-hosted
+    defaults:
+      run:
+        shell: bash
+        working-directory: backend
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
 
-  #     - name: Setup node
-  #       uses: actions/setup-node@v3
-  #       with:
-  #         node-version: 18
+      - name: Setup node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
 
-  #     - name: Get node version
-  #       id: node_version
-  #       run: |
-  #         echo "version=$(node -v)" >> $GITHUB_OUTPUT
+      - name: Get node version
+        id: node_version
+        run: |
+          echo "version=$(node -v)" >> $GITHUB_OUTPUT
 
-  #     - name: Get node_modules cache
-  #       uses: actions/cache@v3
-  #       id: node_modules
-  #       with:
-  #         path: |
-  #           **/node_modules
-  #         key: ${{ runner.os }}-node_modules-${{ hashFiles('**/yarn.lock') }}-${{ steps.node_version.outputs.version }}
+      - name: Get node_modules cache
+        uses: actions/cache@v3
+        id: node_modules
+        with:
+          path: |
+            **/node_modules
+          key: ${{ runner.os }}-node_modules-${{ hashFiles('**/yarn.lock') }}-${{ steps.node_version.outputs.version }}
 
-  #     - name: Install yarn
-  #       run: npm install -g yarn
+      - name: Install yarn
+        run: npm install -g yarn
 
-  #     - name: Install dependencies
-  #       run: yarn install --frozen-lockfile
+      - name: Install dependencies
+        run: yarn install --frozen-lockfile
 
-  #     - name: Run build check
-  #       run: yarn build
+      - name: Run build check
+        run: yarn build
 
-  #     - name: Run test
-  #       run: yarn test
+      - name: Run test
+        run: yarn test
   build-and-push:
     runs-on: self-hosted
-    # needs:
-      # - build-frontend
-      # - build-backend
+    needs:
+      - build-frontend
+      - build-backend
     strategy:
         fail-fast: false
         matrix:
@@ -107,7 +107,7 @@ jobs:
         with:
           images: ${{ matrix.image }}
           tags: |
-            type=sha
+            type=raw,value=release-{{date 'YYYYMMDD-HHmm'}}-{{sha}}
         
       - name: Login to docker registry
         if: github.event_name != 'pull_request'
