--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -118,8 +118,8 @@ jobs:
         uses: docker/login-action@v2
         with:
           registry: swr.ru-moscow-1.hc.sbercloud.ru/geek-battle-2023
-          username: ru-moscow-1@43HZUCF2A4U5KI59XCYZ
-          password: 950777769ccc9430201abb70e82a358711dd404f56775356aeac3cccdd28b415
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build and push
         uses: docker/build-push-action@v4
