--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,9 +15,11 @@
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "antd": "^5.5.0",
+    "apexcharts": "^3.40.0",
     "axios": "^1.4.0",
     "next": "13.4.3",
     "react": "18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-dom": "18.2.0",
     "sass": "^1.62.1",
     "typescript": "5.0.4"
