--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "18.2.4",
     "antd": "^5.5.0",
     "axios": "^1.4.0",
+    "dayjs": "^1.11.7",
     "next": "13.4.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
