--- a/backend/deployment/templates/deployment.yaml
+++ b/backend/deployment/templates/deployment.yaml
@@ -49,6 +49,10 @@ spec:
             {{- toYaml .Values.resources | nindent 12 }}
           {{- if .Values.envSecrets }}
           env:
+            {{- range .Values.envPlain }}
+            - name: {{ .name }}
+              value: {{ .value }}
+            {{- end }}
             {{- range .Values.envSecrets }}
             - name: {{ .name }}
               valueFrom:
