--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,4 +1,4 @@
-name: 'Project CI'
+name: "Project CI"
 
 on:
   push:
@@ -22,33 +22,32 @@ jobs:
               - 'backend/**'
             frontend:
               - 'frontend/**'
-
   build-frontend:
     runs-on: self-hosted
     needs: files-changed
     if: needs.files-changed.outputs.frontend == 'true'
-    uses: ./.github/workflows/build-frontend.yaml
+    uses: Nekkiton/LeadersHack2023/.github/workflows/build-frontend.yaml
 
   deploy-frontend:
     runs-on: self-hosted
     needs: build-frontend
-    uses: ./.github/workflows/deploy.yaml
+    uses: Nekkiton/LeadersHack2023/.github/workflows/deploy.yaml
     with:
       dockerfile: frontend/deployment/Dockerfile
       context: frontend
       image: swr.ru-moscow-1.hc.sbercloud.ru/geek-battle-2023/frontend
     secrets: inherit
-  
+
   build-backend:
     runs-on: self-hosted
     needs: files-changed
     if: needs.files-changed.outputs.backend == 'true'
-    uses: ./.github/workflows/build-backend.yaml
+    uses: Nekkiton/LeadersHack2023/.github/workflows/build-backend.yaml
 
   deploy-backend:
     runs-on: self-hosted
     needs: build-backend
-    uses: ./.github/workflows/deploy.yaml
+    uses: Nekkiton/LeadersHack2023/.github/workflows/deploy.yaml
     with:
       dockerfile: backend/deployment/Dockerfile
       context: backend
