--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -31,7 +31,7 @@ jobs:
   deploy-frontend:
     runs-on: self-hosted
     needs: build-frontend
-    uses: Nekkiton/LeadersHack2023/.github/workflows/deploy.yaml
+    uses: Nekkiton/LeadersHack2023/.github/workflows/deploy.yaml@main
     with:
       dockerfile: frontend/deployment/Dockerfile
       context: frontend
