--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -26,7 +26,40 @@ jobs:
     runs-on: self-hosted
     needs: files-changed
     if: needs.files-changed.outputs.frontend == 'true'
-    uses: Nekkiton/LeadersHack2023/.github/workflows/build-frontend.yaml@main
+    defaults:
+      run:
+        shell: bash
+        working-directory: frontend
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Setup node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+
+      - name: Get node version
+        id: node_version
+        run: |
+          echo "version=$(node -v)" >> $GITHUB_OUTPUT
+
+      - name: Get node_modules cache
+        uses: actions/cache@v3
+        id: node_modules
+        with:
+          path: |
+            **/node_modules
+          key: ${{ runner.os }}-node_modules-${{ hashFiles('**/yarn.lock') }}-${{ steps.node_version.outputs.version }}
+
+      - name: Install yarn
+        run: npm install -g yarn
+
+      - name: Install dependencies
+        run: yarn install --frozen-lockfile
+
+      - name: Check build
+        run: yarn build
 
   deploy-frontend:
     runs-on: self-hosted
@@ -42,7 +75,44 @@ jobs:
     runs-on: self-hosted
     needs: files-changed
     if: needs.files-changed.outputs.backend == 'true'
-    uses: Nekkiton/LeadersHack2023/.github/workflows/build-backend.yaml@main
+    defaults:
+      run:
+        shell: bash
+        working-directory: backend
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Setup node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+
+      - name: Get node version
+        id: node_version
+        run: |
+          echo "version=$(node -v)" >> $GITHUB_OUTPUT
+
+      - name: Get node_modules cache
+        uses: actions/cache@v3
+        id: node_modules
+        with:
+          path: |
+            **/node_modules
+          key: ${{ runner.os }}-node_modules-${{ hashFiles('**/yarn.lock') }}-${{ steps.node_version.outputs.version }}
+
+      - name: Install yarn
+        run: npm install -g yarn
+
+      - name: Install dependencies
+        run: yarn install --frozen-lockfile
+
+      - name: Run build check
+        run: yarn build
+
+      - name: Run test
+        run: yarn test --passWithNoTests
+
 
   deploy-backend:
     runs-on: self-hosted
