--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -23,15 +23,13 @@ jobs:
             frontend:
               - 'frontend/**'
   build-frontend:
-    runs-on: self-hosted
     needs: files-changed
     if: needs.files-changed.outputs.frontend == 'true'
-    uses: Nekkiton/LeadersHack2023/.github/workflows/build-frontend.yaml@main
+    uses: ./.github/workflows/build-frontend.yaml@main
 
   deploy-frontend:
-    runs-on: self-hosted
     needs: build-frontend
-    uses: Nekkiton/LeadersHack2023/.github/workflows/deploy.yaml@main
+    uses: ./.github/workflows/deploy.yaml@main
     with:
       dockerfile: frontend/deployment/Dockerfile
       context: frontend
@@ -39,15 +37,13 @@ jobs:
     secrets: inherit
 
   build-backend:
-    runs-on: self-hosted
     needs: files-changed
     if: needs.files-changed.outputs.backend == 'true'
-    uses: Nekkiton/LeadersHack2023/.github/workflows/build-backend.yaml@main
+    uses: ./.github/workflows/build-backend.yaml@main
 
   deploy-backend:
-    runs-on: self-hosted
     needs: build-backend
-    uses: Nekkiton/LeadersHack2023/.github/workflows/deploy.yaml@main
+    uses: ./.github/workflows/deploy.yaml@main
     with:
       dockerfile: backend/deployment/Dockerfile
       context: backend
