--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,6 +13,8 @@ jobs:
       backend: ${{ steps.changes.outputs.backend }}
       frontend: ${{ steps.changes.outputs.frontend }}
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
       - name: Check for folder file changes
         uses: dorny/paths-filter@v2
         id: filter
