--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/checkout@v3
       - name: Check for folder file changes
         uses: dorny/paths-filter@v2
-        id: filter
+        id: changes
         with:
           filters: |
             backend:
