--- a/backend/deployment/templates/deployment.yaml
+++ b/backend/deployment/templates/deployment.yaml
@@ -38,10 +38,12 @@ spec:
               containerPort: {{ .Values.service.port }}
               protocol: TCP
           livenessProbe:
+            initialDelaySeconds: 10
             httpGet:
               path: /api/v1/_internal/live
               port: http
           readinessProbe:
+            initialDelaySeconds: 30
             httpGet:
               path: /api/v1/_internal/ready
               port: http
