--- a/backend/deployment/values.yaml
+++ b/backend/deployment/values.yaml
@@ -45,8 +45,9 @@ ingress:
   enabled: true
   className: "nginx"
   annotations:
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
+    nginx.ingress.kubernetes.io/auth-url: http://backend-backend-deployment.default.svc.cluster.local:3000/api/v1/auth/auth
+    nginx.ingress.kubernetes.io/auth-signin: https://geek-battle-2023.ru/signin
+    nginx.ingress.kubernetes.io/auth-response-headers: authorization
   hosts:
     - host: geek-battle-2023.ru
       paths:
