--- a/frontend/deployment/values.yaml
+++ b/frontend/deployment/values.yaml
@@ -57,6 +57,23 @@ ingress:
      hosts:
        - geek-battle-2023.ru
 
+ingressPublic:
+  enabled: true
+  className: "nginx"
+  hosts:
+    - host: geek-battle-2023.ru
+      paths:
+        - path: /signin
+          pathType: ImplementationSpecific
+        - path: /images
+          pathType: ImplementationSpecific
+        - path: /favicon.ico 
+          pathType: ImplementationSpecific
+  tls:
+   - secretName: geek-battle-ssl
+     hosts:
+       - geek-battle-2023.ru
+
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
   # choice for the user. This also increases chances charts run on environments with little
