--- a/backend/deployment/values.yaml
+++ b/backend/deployment/values.yaml
@@ -45,6 +45,7 @@ ingress:
   enabled: true
   className: "nginx"
   annotations:
+    nginx.ingress.kubernetes.io/enable-cors: "true"
     nginx.ingress.kubernetes.io/auth-url: http://backend-backend-deployment.default.svc.cluster.local:3000/api/v1/auth
     nginx.ingress.kubernetes.io/auth-signin: https://geek-battle-2023.ru/login?redirectUrl=$request_uri
   hosts:
@@ -60,6 +61,8 @@ ingress:
 ingressPublic:
   enabled: true
   className: "nginx"
+  annotations:
+    nginx.ingress.kubernetes.io/enable-cors: "true"
   hosts:
     - host: geek-battle-2023.ru
       paths:
