[backend] CORS attempt2

--- a/backend/deployment/values.yaml
+++ b/backend/deployment/values.yaml
@@ -46,6 +46,7 @@ ingress:
   className: "nginx"
   annotations:
     nginx.ingress.kubernetes.io/enable-cors: "true"
+    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
     nginx.ingress.kubernetes.io/auth-url: http://backend-backend-deployment.default.svc.cluster.local:3000/api/v1/auth
     nginx.ingress.kubernetes.io/auth-signin: https://geek-battle-2023.ru/login?redirectUrl=$request_uri
   hosts:
@@ -63,6 +64,7 @@ ingressPublic:
   className: "nginx"
   annotations:
     nginx.ingress.kubernetes.io/enable-cors: "true"
+    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
   hosts:
     - host: geek-battle-2023.ru
       paths:
