--- a/frontend/deployment/values.yaml
+++ b/frontend/deployment/values.yaml
@@ -45,11 +45,38 @@ ingress:
   enabled: true
   className: "nginx"
   annotations:
+    nginx.ingress.kubernetes.io/enable-cors: "true"
+    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
+    nginx.ingress.kubernetes.io/auth-url: http://backend-backend-deployment.default.svc.cluster.local:3000/api/v1/auth
+    nginx.ingress.kubernetes.io/auth-signin: https://geek-battle-2023.ru/login
   hosts:
     - host: geek-battle-2023.ru
       paths:
         - path: /
           pathType: ImplementationSpecific
+  tls:
+   - secretName: geek-battle-ssl
+     hosts:
+       - geek-battle-2023.ru
+
+ingressPublic:
+  enabled: true
+  className: "nginx"
+  annotations:
+    nginx.ingress.kubernetes.io/enable-cors: "true"
+    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
+  hosts:
+    - host: geek-battle-2023.ru
+      paths:
+        - path: /_next/static
+          pathType: ImplementationSpecific
+        - path: /images
+          pathType: ImplementationSpecific
+        - path: /login
+          pathType: ImplementationSpecific
+        - path: /favicon.ico
+          pathType: ImplementationSpecific
+
   tls:
    - secretName: geek-battle-ssl
      hosts:
