[frontend] whitelist register final route

--- a/frontend/deployment/values.yaml
+++ b/frontend/deployment/values.yaml
@@ -74,6 +74,8 @@ ingressPublic:
           pathType: ImplementationSpecific
         - path: /login
           pathType: ImplementationSpecific
+        - path: /register/final
+          pathType: ImplementationSpecific
         - path: /favicon.ico
           pathType: ImplementationSpecific
 
